[project]
name = "comfyui-image-filters"
description = "Image and matte filtering nodes for ComfyUI `image/filters/*`"
version = "1.0.0"
license = "LICENSE"
dependencies = ["opencv-contrib-python>=4.7.0.72", "opencv-contrib-python-headless>=4.7.0.72", "opencv-python>=4.7.0.72", "opencv-python-headless>=4.7.0.72", "pymatting"]

[project.urls]
Repository = "https://github.com/spacepxl/ComfyUI-Image-Filters"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Image-Filters"
Icon = ""
